# PynaMIT

./: .gitignore  Dockerfile  LICENSE  README.md  github-ci.yml  pyproject.toml  pytest.ini
.github/workflows/: build-and-test.yml  (+3 more)
notebooks/: hdstations.csv  mage_forcing.py  pynamitplot.ipynb
scripts/: dynamit_oscillation.py  dynamit_simulation.py  dynamit_simulation_initialized_with_wind.py  dynamit_simulation_interpolation.py  dynamit_simulation_long.py  dynamit_simulation_uniform.py  figlayout.py  find_steady_state.py  geometry_illustration.py  high_lat_induction_simulation.py  illustration.py  illustration_talk.py  interpolation_regularization.py  mainfield_demo.py  plot_stuff.py  reg_experiment.py  sh_experiments.py  simple_test.py  steady_state_test.py  sympy_matrix_algebra.py  test.py  test_PFAC.py  test_ihc.py  test_simulation.py  ulat.npy  ulon.npy  utheta.npy  wind_induction_simulation.py  wind_interpolation.py
src/: pynamit.py  sh_utils.py
tests/: 2d_dipole.py  test_2d_dipole.py  test_2d_dipole_pfac.py  test_2d_dipole_pfac_exp.py  test_2d_dipole_pfac_hc.py  test_2d_dipole_pfac_hc_exp.py  test_2d_dipole_pnaf.py  test_2d_igrf_pfac_hc.py  test_2d_igrf_pfac_hc_wind.py  test_2d_igrf_pfac_hc_wind_grid.py  test_2d_igrf_pfac_hc_zerodip.py  test_2d_igrf_pfac_hc_zerodip_wind.py  test_2d_igrf_pfac_hc_zerodip_wind_grid.py  test_differentation.py  test_mag_boundary.py  test_projection.py  test_regularization.py  test_steady_state_init.py  test_steady_state_init_grid.py
visualization_scripts/: figlayout.py  ground_B_timeseries.py  illustration.py  illustration_talk.py  plot_snapshots.py  plot_stuff.py  simulation_case.py
(+117 files in other folders)
