[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pynamit"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
src = ["src", "tests", "scripts"]
extend-exclude = ["__init__.py"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"