[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pynamit"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
src = ["src", "tests", "scripts"]
extend-exclude = ["__init__.py"]
line-length = 99

[tool.ruff.lint]
extend-select = ["E", "W", "D"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
skip-magic-trailing-comma = true
